# LabReport

./: .gitignore  Explorer.py  Lab_Report.py  editor_file_tracker.json  file_tracker.json  main.py  pyproject.toml  report_metadata_tracker.json  requirements.txt  test_kinda.txt
LabReport/: Lab_Report.py  editor_file_tracker.json  file_tracker.json  pyproject.toml  report_metadata_tracker.json  requirements.txt  updated_subdataset_1.csv
LabReport/experiments/: 20230308_PB triton seed 06.03.json  20230308_PB triton seed 06.json  xlsx.json
LabReport/pages/: Editor.py  Explorer.py  Reports.py  TryOut.py  datasets.py  zzz.py
LabReport/src/: excel_manager.py
LabReport/src/labreport.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
LabReport/src/models/: board.py  experiment.py  measurement.py  section.py  well.py
LabReport/src_st/: main.py
LabReport/uploads/: 20230224_triton_VVB.xlsx  20230301_PB_triton_2.xlsx  20230308_PB triton seed 06.03.xlsx
Prototype/: requirements.txt
Prototype/app/: main.py
Prototype/app/logic/: file_utils.py  load_dataset.py  metrics.py  report.py  users.py
Prototype/app/pages/: about.md  home.md  report.md  users.md
Prototype/templates/: congratulations.html  index.html  page.html  report.html  report_form.html  submitted_report.html  table_page.html  users.html
Prototype/templates/include/: sidebar.html
TRACKERS/: editor_file_tracker.json  file_tracker.json  report_metadata_tracker.json  zza_file_tracker.json  zzz_file_tracker.json  zzz_report_metadata_tracker.json
doc/diagrams/: .$diagrams.drawio.bkp  .$diagrams.drawio.dtmp  .$use_case.drawio.bkp  algumResumo.drawio  diagrams.drawio  use_case.drawio
pages/: Editor.py  Explorer.py  Report.py
src/: main.py  requirements.txt
src/file_manager/excell_importer/: excell_importer.py
src/file_manager/report_generator/: Plate 1 - Sheet1 (2).csv
src/file_manager/tests/artifacts/: 20230224_triton_VVB.xlsx
src/file_manager/tests/multiples/: extra_junk.py  junk.py  streamlit.py
src/file_manager/tests/multiples/HTMX_/: main.py
src/file_manager/tests/multiples/HTMX_/templates/: index.html
src/helpers/: tracker_utilis.py
src/labreport.egg-info/: top_level.txt
src/models/: editorial.py  experiment.py  file_selector.py  incubation.py  medium.py  report_creator.py  section.py  simulator_aid.py  well.py
tests/: 20230802_PBval_run1.xlsx  20230809_PBval_run2.xlsx  test_tracker.py
tests/artifacts/: ~$20230308_PB triton seed 06.03.xlsx
tests/multiples/: dataset_finder.py  junk.py
tests/multiples/HTMX_/: requirements.txt
tests/multiples/HTMX_/static/css/: style3.css
tests/multiples/HTMX_/templates/include/: sidebar.html
