[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "labreport"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "streamlit==1.41.1",
  "pandas==1.5.3",
  "numpy==1.23.5",
  "weasyprint==64.0",
  "st-table-select-cell==0.3.4",
  "python-dotenv==0.19.2",
  "openpyxl",
  "matplotlib"
]


[project.optional-dependencies]
gui = ["tkinter"]
dev = ["black", "flake8", "pytest"]

authors = [
  {name = "Angelina Eiras", email = "angelinaeiras@proton.me"}
]
maintainers = [
  {name = "Angelina Eiras", email = "angelinaeiras@proton.me"}
]

description = "Electronic Laboratory Notebook"
license = {file = "LICENSE.txt"}
keywords = ["bioinformatics", "labreport", "notebook"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

