[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "labreport"
version = "0.1.0"
description = "A Streamlit-based lab reporting app"
dependencies = [
  
python = ">=3.9,<3.12"
streamlit = "1.41.1"
pandas = "1.5.3"
numpy = "1.23.5"
weasyprint = "64.0"
st-table-select-cell = "0.3.4"
python-dotenv = "0.19.2"

]
requires-python = ">=3.9"
authors = [
  {name = "Angelina Eiras", email = "angelinaeiras@pm.me"}
]
maintainers = [
  {name = "Angelina Eiras", email = "angelinaeiras@pm.me"}
]

description = "Eletronic Laboratory Notebook"
readme = "README.rst"
license = {file = "LICENSE.txt"}
keywords = ["bioinformatics", "labreport", "notebook"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
